fixed issue with gallery on mobile and deleted unnecessary dependencies

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -84,3 +84,7 @@
 	text-align: center;
 	width: 90vw;
 }
+
+.galleryImage {
+	cursor: zoom-in;
+}
